httpserver/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
  labels:
    app: httpserver
spec:
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: httpserver
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 30%
      maxSurge: 30%
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      terminationGracePeriodSeconds: 30
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - httpserver
                topologyKey: kubernetes.io/hostname
              weight: 100
      securityContext:
        runAsUser: 5000
        runAsGroup: 5000
      containers:
        - name: httpserver
          image: shangmingyu/httpserver:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 300m
              memory: 300Mi
            limits:
              cpu: 300m
              memory: 300Mi
          startupProbe: #启动探针
            httpGet:
              path: /healthz
              port: 8888
            periodSeconds: 3
            failureThreshold: 10
          livenessProbe: # 存活探针
            httpGet:
              path: /healthz
              port: 8888
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 2
          readinessProbe: # 就绪探针
            httpGet:
              path: /healthz
              port: 8888
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          lifecycle: 
            preStop:
              exec:
                command: ["/bin/bash", "-c", "sleep 20"]
