httpserver/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
  labels:
    app: httpserver
spec:
  selector:
    app: httpserver
  ports:
    - port: 8888
      targetPort: 8888
      name: http-port
